package org.hbrs.ooka.ws2020.uebung1.buchungssystem;

public interface Caching {

}
