package org.hbrs.ooka.ws2020.uebung1.ext.log;

public interface Logging {

    void logAction(String query);
}
