@startuml

title __CODE's Class Diagram__\n

  namespace org.hbrs.ooka.ws2020.uebung1 {
    class org.hbrs.ooka.ws2020.uebung1.Hotel {
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace buchungssystem {
      class org.hbrs.ooka.ws2020.uebung1.buchungssystem.DBAccess {
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace buchungssystem {
      class org.hbrs.ooka.ws2020.uebung1.buchungssystem.HotelRetrieval {
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      class org.hbrs.ooka.ws2020.uebung1.ext.Clienttest {
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace cache {
        class org.hbrs.ooka.ws2020.uebung1.ext.cache.Cache {
        }
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace cache {
        class org.hbrs.ooka.ws2020.uebung1.ext.cache.CachePort {
        }
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace cache {
        interface org.hbrs.ooka.ws2020.uebung1.ext.cache.Caching {
        }
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace hotelsuche {
        interface org.hbrs.ooka.ws2020.uebung1.ext.hotelsuche.HotelSuche {
        }
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace hotelsuche {
        class org.hbrs.ooka.ws2020.uebung1.ext.hotelsuche.HotelSuchePort {
        }
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace log {
        class org.hbrs.ooka.ws2020.uebung1.ext.log.Logger {
        }
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace log {
        class org.hbrs.ooka.ws2020.uebung1.ext.log.LoggerPort {
        }
      }
    }
  }
  

  namespace org.hbrs.ooka.ws2020.uebung1 {
    namespace ext {
      namespace log {
        interface org.hbrs.ooka.ws2020.uebung1.ext.log.Logging {
        }
      }
    }
  }
  

  org.hbrs.ooka.ws2020.uebung1.buchungssystem.HotelRetrieval .up.|> org.hbrs.ooka.ws2020.uebung1.ext.hotelsuche.HotelSuche
  org.hbrs.ooka.ws2020.uebung1.buchungssystem.HotelRetrieval o-- org.hbrs.ooka.ws2020.uebung1.buchungssystem.DBAccess : acc
  org.hbrs.ooka.ws2020.uebung1.buchungssystem.HotelRetrieval o-- org.hbrs.ooka.ws2020.uebung1.ext.cache.CachePort : cachePort
  org.hbrs.ooka.ws2020.uebung1.ext.cache.Cache .up.|> org.hbrs.ooka.ws2020.uebung1.ext.cache.Caching
  org.hbrs.ooka.ws2020.uebung1.ext.cache.CachePort .up.|> org.hbrs.ooka.ws2020.uebung1.ext.cache.Caching
  org.hbrs.ooka.ws2020.uebung1.ext.cache.CachePort o-- org.hbrs.ooka.ws2020.uebung1.ext.cache.Cache : cache
  org.hbrs.ooka.ws2020.uebung1.ext.hotelsuche.HotelSuchePort .up.|> org.hbrs.ooka.ws2020.uebung1.ext.hotelsuche.HotelSuche
  org.hbrs.ooka.ws2020.uebung1.ext.hotelsuche.HotelSuchePort o-- org.hbrs.ooka.ws2020.uebung1.buchungssystem.HotelRetrieval : hr
  org.hbrs.ooka.ws2020.uebung1.ext.hotelsuche.HotelSuchePort o-- org.hbrs.ooka.ws2020.uebung1.ext.log.LoggerPort : logPort
  org.hbrs.ooka.ws2020.uebung1.ext.log.Logger .up.|> org.hbrs.ooka.ws2020.uebung1.ext.log.Logging
  org.hbrs.ooka.ws2020.uebung1.ext.log.LoggerPort .up.|> org.hbrs.ooka.ws2020.uebung1.ext.log.Logging
  org.hbrs.ooka.ws2020.uebung1.ext.log.LoggerPort o-- org.hbrs.ooka.ws2020.uebung1.ext.log.Logger : log


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
